# goify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/goesque/: _runtime.py
src/goify/: __init__.py  _runtime.py
tests/: test_goesque.py  test_goify.py
