[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goesque"
version = "0.1.0"
description = "Patch Python function objects with a gevent-backed go() helper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gevent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
